alb-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - name: alb-ingress-controller
        image: docker.io/amazon/aws-alb-ingress-controller:v1.1.6
        args:
        - --ingress-class=alb
        - --cluster-name=fargate-cluster-new
        - --aws-vpc-id=vpc-05318d59f06232894
        - --aws-region=eu-west-1
      serviceAccountName: alb-ingress-controller
